Refactor MCPUriVariables